--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,14 +3,25 @@ name: Build Docker
 on: 
   workflow_dispatch:
 
+permissions:
+  contents: read
+  packages: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+
+      - name: Install Regctl
+        uses: iarekylew00t/regctl-installer@v1
+
       - name: Login into Github Docker Registery
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+
+      - name: Login into Docker Hub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u shyim --password-stdin
 
       - name: Set up Docker Buildx
         id: buildx
@@ -18,5 +29,6 @@ jobs:
 
       - name: Build Image
         run: docker buildx build --platform="linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64,linux/ppc64le,linux/s390x" --tag ghcr.io/shyim/supervisord  --push .
-    
-  
+
+      - name: Copy to Docker Hub
+        run: regctl image copy ghcr.io/shyim/supervisord shyim/supervisord
