--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
       - name: Login into Docker Hub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u shyim --password-stdin
+        run: echo "${{ secrets.DOCKER_HUB_PAT }}" | docker login -u shyim --password-stdin
 
       - name: Set up Docker Buildx
         id: buildx
